Fix modal scroll bug on mobile devices

--- a/src/app/modules/shared/components/modal/modal-holder/modal-holder.scss
+++ b/src/app/modules/shared/components/modal/modal-holder/modal-holder.scss
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     z-index: 9999;
 
     .backdrop {
